# ProjectDalian

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES_v0.5.10-alpha.md  RELEASE_NOTES_v0.5.11-alpha.md  RELEASE_NOTES_v0.5.12-alpha.md  RELEASE_NOTES_v0.5.13-alpha.md  RELEASE_NOTES_v0.5.14-alpha.md  RELEASE_NOTES_v0.5.15-alpha.md  RELEASE_NOTES_v0.5.16-alpha.md  RELEASE_NOTES_v0.5.17-alpha.md  RELEASE_NOTES_v0.5.18-alpha.md  RELEASE_NOTES_v0.5.19-alpha.md  RELEASE_NOTES_v0.5.4-alpha.md  RELEASE_NOTES_v0.5.5-alpha.md  RELEASE_NOTES_v0.5.6-alpha.md  RELEASE_NOTES_v0.5.7-alpha.md  RELEASE_NOTES_v0.5.8-alpha.md  RELEASE_NOTES_v0.5.9-alpha.md  vcpkg.json
.github/workflows/: build.yml
apps/dalian/: CMakeLists.txt  ambient_emitter.cpp  ambient_emitter.hpp  app_settings.hpp  audio_context.cpp  audio_context.hpp  bf2_effects.cpp  bf2_effects.hpp  bf2_path.cpp  bf2_path.hpp  bot_names.cpp  bot_names.hpp  conquest_sim.cpp  conquest_sim.hpp  conquest_types.hpp  conquest_voice.hpp  controls_ui.cpp  controls_ui.hpp  dalian_util_tests.cpp  factions.hpp  game_audio.cpp  game_audio.hpp  game_logic_parser.cpp  game_logic_parser.hpp  game_sim.cpp  game_sim.hpp  game_sim_conquest.inl  game_sim_heli_weapons.inl  game_sim_interaction.inl  game_sim_missiles.inl  game_sim_state.hpp  game_sim_tank_weapons.inl  game_sim_types.hpp  game_sim_vehicles.inl  game_snapshot.cpp  game_snapshot.hpp  game_state.hpp  hitbox_zones.cpp  hitbox_zones.hpp  hud_feed.cpp  (+46 more)
apps/dalian/content/emplacements/mim23_hawk/: mim23_launcher.mtl
apps/dalian/content/missiles/storm_shadow/: storm_shadow.mtl
apps/sandbox/: CMakeLists.txt  main.cpp
apps/viewer/: CMakeLists.txt  main.cpp
docs/: BF2_LEVEL_FORMAT.md  PARITY.md
docs/formats/: README.md
engine/: CMakeLists.txt
engine/anim/: pose.cpp  pose.hpp  skinning.cpp  skinning.hpp
engine/core/: archive_path_resolve.cpp  archive_path_resolve.hpp  asset_audit.cpp  asset_audit.hpp  atmosphere.hpp  collision_resolver.cpp  collision_resolver.hpp  compiled_roads_parser.cpp  compiled_roads_parser.hpp  level_loader.cpp  level_loader.hpp  level_validator.cpp  level_validator.hpp  mesh_bounds.cpp  mesh_bounds.hpp  object_lightmaps.hpp  overgrowth_instances.cpp  overgrowth_instances.hpp  overgrowth_parser.cpp  overgrowth_parser.hpp  placement_audit.cpp  placement_audit.hpp  placement_snap.cpp  placement_snap.hpp  resource_manager.cpp  resource_manager.hpp  scene_graph.cpp  scene_graph.hpp  static_object_parser.cpp  static_object_parser.hpp  template_resolver.cpp  template_resolver.hpp  undergrowth.hpp
engine/formats/animation/: bf2_animation.cpp  bf2_animation.hpp
engine/formats/archive/: archive.cpp  archive.hpp
engine/formats/collision/: bf2_collision.cpp  bf2_collision.hpp
engine/formats/dds/: dds_loader.cpp  dds_loader.hpp
engine/formats/effects/: effect_bundle.cpp  effect_bundle.hpp
engine/formats/mesh/: bf2_mesh.cpp  bf2_mesh.hpp  bf2_road_mesh.cpp  bf2_road_mesh.hpp  obj_loader.cpp  obj_loader.hpp
engine/formats/nav/: bf2_nav_mesh.cpp  bf2_nav_mesh.hpp
engine/formats/terrain/: heightmap_cluster.cpp  heightmap_cluster.hpp  terrain_colormap.cpp  terrain_colormap.hpp  terrain_con_parser.cpp  terrain_con_parser.hpp  terrain_loader.cpp  terrain_loader.hpp
engine/future/: phase8_stubs.hpp
engine/net/: net.cpp  net.hpp  network_stub.cpp  network_stub.hpp
engine/physics/: drone.hpp  kamikaze_drone.hpp  missile.hpp  physics_world.cpp  physics_world.hpp
engine/render/: cascaded_shadow_maps.hpp  fsr1_cpu.hpp  fsr1_shaders.inl  renderer.cpp  renderer.hpp  texture_cache.cpp  texture_cache.hpp  texture_resolve.cpp  texture_resolve.hpp  upscaling.hpp
engine/script/: con_interpreter.cpp  con_interpreter.hpp  gameplay_script.cpp  gameplay_script.hpp
scripts/: package_windows_release.ps1  run_placement_audit.ps1  validate_all_levels.ps1
tests/: CMakeLists.txt  test_formats.cpp  test_minimal.cpp
tests/fixtures/: cube.staticmesh
tools/: CMakeLists.txt
tools/assetprobe/: CMakeLists.txt  main.cpp
tools/bf2_asset_scan/: README.md  bf2_asset_scan.py  bf2_mechanics_scan.py
tools/level_validator/: CMakeLists.txt  main.cpp
tools/mesh_import/: README.md  convert_fbx_to_obj.py  export_mim23.py  inspect_fbx.py  inspect_fbx2.py
tools/meshinfo/: CMakeLists.txt  main.cpp
tools/placement_audit/: CMakeLists.txt  main.cpp
tools/snapshot/: CMakeLists.txt  main.cpp
tools/texture_remaster/: .gitignore  README.md  dds_io.py  inventory.py  pipeline.py  requirements.txt  upscale.py
